# CLI-code-agent

./: LICENSE  README.md  pyproject.toml
mont/: test_0.py  test_1.py  test_2.py
src/codeagent/: agent.py  cli.py  client.py  code_agent_logger.py  config.yaml  exec_result.py  executor.py  orchestrator.py  state.py  static_code_validation.py
src/codeagent/system_prompts/: coder_prompt_base.md  fixer_prompt_base.md  planner_prompt_base.md  reviewer_prompt_base.md
tests/: client_test.py  confest.py  docker_test.py  model_test.py  orchestrator_test.py
