[project]
name = "codeagent"
version = "0.1.0"
description = "CLI agent that writes, runs, checks, and fixes code locally with Ollama"
readme = "README.md"
        authors = [
            {name = "Aleksei Zalogin", email = "slewepyboy906sb@gmail.com"}
        ]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]   # было [project.optional-dev] – исправлено
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.200",
]

[project.scripts]
codeagent = "codeagent.cli:main"   # должно указывать на функцию в cli.py

[project.urls]
Homepage = "https://github.com/SickSect/CLI-code-agent"
Repository = "https://github.com/SickSect/CLI-code-agent"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']   # было ['p'] – исправлено

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N"]